[gd_scene load_steps=8 format=3 uid="uid://dwjhdo8uhvr78"]

[ext_resource type="Script" path="res://scenes/crafting/crafter.gd" id="1_6qktu"]
[ext_resource type="Texture2D" uid="uid://cls30yg45jurd" path="res://assets/crafter.png" id="1_lgx7m"]
[ext_resource type="Script" path="res://scenes/crafting/crafter_slot.gd" id="2_hn4x0"]
[ext_resource type="Texture2D" uid="uid://du5ejskiyeuim" path="res://assets/crafter_gear.png" id="2_s4ql1"]
[ext_resource type="Texture2D" uid="uid://brehpgty3yagl" path="res://assets/crafter_2.png" id="3_2kncr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c7xga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lgx7m")
}, {
"duration": 1.0,
"texture": ExtResource("3_2kncr")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vehxo"]
size = Vector2(92, 90)

[node name="Crafter" type="Node2D"]
script = ExtResource("1_6qktu")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = -1
sprite_frames = SubResource("SpriteFrames_c7xga")
autoplay = "default"
frame_progress = 0.741557

[node name="Gear" type="Sprite2D" parent="."]
modulate = Color(0.827451, 0.827451, 0.827451, 1)
texture = ExtResource("2_s4ql1")

[node name="LeftSlot" type="Area2D" parent="."]
position = Vector2(-32, 0)
collision_layer = 2
collision_mask = 6
script = ExtResource("2_hn4x0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSlot"]
scale = Vector2(0.64, 0.64)
shape = SubResource("RectangleShape2D_vehxo")

[node name="RightSlot" type="Area2D" parent="."]
position = Vector2(32, 0)
collision_layer = 2
collision_mask = 6
script = ExtResource("2_hn4x0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSlot"]
scale = Vector2(0.64, 0.64)
shape = SubResource("RectangleShape2D_vehxo")

[connection signal="destroyed" from="LeftSlot" to="." method="_on_destroyed"]
[connection signal="hovered" from="LeftSlot" to="." method="_on_hovered"]
[connection signal="lost_item" from="LeftSlot" to="." method="_on_left_slot_changed"]
[connection signal="received_item" from="LeftSlot" to="." method="_on_left_slot_changed"]
[connection signal="unhovered" from="LeftSlot" to="." method="_on_unhovered"]
[connection signal="destroyed" from="RightSlot" to="." method="_on_destroyed"]
[connection signal="hovered" from="RightSlot" to="." method="_on_hovered"]
[connection signal="lost_item" from="RightSlot" to="." method="_on_right_slot_changed"]
[connection signal="received_item" from="RightSlot" to="." method="_on_right_slot_changed"]
[connection signal="unhovered" from="RightSlot" to="." method="_on_unhovered"]
